Stopped button (and anchor button) contents from wrapping.

--- a/byteprint/static/core/admin/css/admin.css
+++ b/byteprint/static/core/admin/css/admin.css
@@ -70,6 +70,7 @@ a.button {
     line-height: 24px;
     height: 24px;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 a.button {
